--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.8.1
-Django>=4.2.18
+# Django>=4.2.18
 django>=4.2.18
 django-environ==0.11.2
 djangorestframework==3.15.2
@@ -14,10 +14,9 @@ whitenoise==6.7.0
 flask
 requests
 dj-database-url
-psycopg2-binary
+# psycopg2-binary
 celery  
 freezegun
-twilio
 redis
 sendgrid-django
 python-dotenv
